<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edtRecipientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipient_name"
        android:inputType="textPersonName"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/edtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_address"
        android:inputType="textPostalAddress"
        android:layout_marginBottom="8dp" />

</LinearLayout>