<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

<!-- TextView cho Mô tả Voucher -->
<TextView
    android:id="@+id/txtVoucherDesc"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/voucher_description"
    android:textSize="18sp"
    android:textStyle="bold"
    android:textColor="@color/color_espresso"
    android:fontFamily="sans-serif-medium"
    android:maxLines="2"
    android:ellipsize="end"
    android:layout_marginBottom="4dp" />

<!-- TextView cho Mã Voucher -->
<TextView
    android:id="@+id/txtVoucherCode"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/voucher_code"
    android:textSize="14sp"
    android:textColor="@color/color_medium_gray"
    android:fontFamily="sans-serif"
    android:layout_marginBottom="4dp" />

<!-- TextView cho Ngày hết hạn Voucher -->
<TextView
    android:id="@+id/txtVoucherExpiry"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/voucher_expire"
    android:textSize="14sp"
    android:textColor="@color/color_medium_gray"
    android:fontFamily="sans-serif" />

</LinearLayout>
</androidx.cardview.widget.CardView>
